[package]
name = "osm-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust binding for the Open Street Map Api"
repository = "https://github.com/x807x/openstreetmap-api"
readme = "README.md"
keywords = ["openstreetmap", "api", "geospatial", "gis"]
categories = ["api-bindings"]

[features]
default = ["json-api"]
json-api = ["dep:serde_json"]

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["alloc", "serde", "clock"] }
log = "0.4.25"
quick-xml = { version = "0.37.2", default-features = false, features = ["serialize"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", optional = true }

[dev-dependencies]
anyhow = "1.0.95"
colored = "3.0.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
